# corazonn

./: .env.example  .gitignore  BEAT_DETECTOR_ANALYSIS.md  CLAUDE.md  COMPONENT_7.7_SUMMARY.md  LIGHTING_DIAGNOSIS.md  Procfile  Procfile.test  README.md  TEST_RESULTS_COMPONENT_7.7.md  pyproject.toml  test_sound_engine_connections.py
agents/: README.md
amor/: __init__.py  __main__.py  audio.py  audio_effects.py  capture.py  cli.py  cmd.py  control.py  detector.py  launchpad.py  lighting.py  lighting_programs.py  log.py  logging.py  osc.py  predictor.py  processor.py  replay.py  sampler.py  sequencer.py  viewer.py
audio/: HEARTBEAT_PROTOTYPE_README.md  PHASE1-IMPLEMENTATION.md  README.md  analyze_pitch.py  audio_engine.py  download_freesound_library.py  freesound_ids.yaml  generate_ppg_samples.py  generate_samples.py  process_samples.sh  prototype_heartbeat_synth.py  query_library.py  search_ambient_loops.py  test_audio_engine.py  test_effects.py
docs/: amor-heartbeat-prediction-design.md  amor-sampler-design.md  amor-sequencer-design.md  amor-technical-reference.md  audio-effects-configuration.md  beat-timing-fix.md  component-7-part1-environment.md  component-7-part2-skeleton.md  component-7-part3-wifi.md  component-7-part4-messages.md  component-7-part5-complete.md  component-7-tasks-draft.md  deployment-checklist.md  fft-detector-evaluation.md  firmware-power-management.md  fw-design.md  hw-design.md  integration-test-ideas.md  integration-testing-design.md  launchpad-control-modes.md  p1-fw-trd.md  project-structure.md  rtmixer-architecture.md  sonification.md  (+4 more)
(+293 files in other folders)
