[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["amor*"]

[project]
name = "corazonn"
version = "0.1.0"
description = "IoT heartbeat monitoring system with ESP32 firmware and Python testing infrastructure"
requires-python = ">=3.9"

dependencies = [
    "python-osc>=1.8.0",
]

[project.optional-dependencies]
dev = [
    "pip>=24.0",
    "platformio>=6.1.0",
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "honcho>=1.1.0",  # For running Procfile.test integration tests
    "matplotlib"
]

lighting = [
    "python-kasa>=0.6.0",
    "pyyaml>=6.0",
]

audio = [
    "rtmixer>=0.1.0",
    "soundfile>=0.12.0",
    "numpy>=1.20.0",
    "mido>=1.3.0",
    "python-rtmidi>=1.5.0",
    "pyyaml>=6.0",
    "pedalboard>=0.9.0"
]

sequencer = [
    "pyyaml>=6.0",
    "mido>=1.3.0",
    "python-rtmidi>=1.5.0"
]

control = [
    "anthropic>=0.40.0",
    "pyyaml>=6.0"
]
